# libmodbus

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
src/: modbus-tcp.c
